// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application test Cart link output count items in cart 1`] = `
<div
  class="Application-Menu collapse navbar-collapse"
>
  <div
    class="navbar-nav"
  >
    <a
      class="nav-link"
      href="/catalog"
    >
      Catalog
    </a>
    <a
      class="nav-link"
      href="/delivery"
    >
      Delivery
    </a>
    <a
      class="nav-link"
      href="/contacts"
    >
      Contacts
    </a>
    <a
      class="nav-link"
      href="/cart"
    >
      Cart (2)
    </a>
  </div>
</div>
`;

exports[`Application test navbar is exists 1`] = `
<nav
  class="navbar navbar-expand-sm navbar-light bg-light"
>
  <div
    class="container"
  >
    <a
      class="Application-Brand navbar-brand"
      href="/"
    >
      Example store
    </a>
    <button
      aria-label="Toggle navigation"
      class="Application-Toggler navbar-toggler"
    >
      <span
        class="navbar-toggler-icon"
      />
    </button>
    <div
      class="Application-Menu collapse navbar-collapse"
    >
      <div
        class="navbar-nav"
      >
        <a
          class="nav-link"
          href="/catalog"
        >
          Catalog
        </a>
        <a
          class="nav-link"
          href="/delivery"
        >
          Delivery
        </a>
        <a
          class="nav-link"
          href="/contacts"
        >
          Contacts
        </a>
        <a
          class="nav-link"
          href="/cart"
        >
          Cart
        </a>
      </div>
    </div>
  </div>
</nav>
`;
